<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configure.configureFragment">

    <LinearLayout
        android:id="@+id/configure_background"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical"
        android:background="@color/gray_400"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <TextView
        android:id="@+id/text_configure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/configure_recognize_category_border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="vertical"
        android:background="@color/gray_600"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/configure_language_LinearLayout"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/configure_recognize_category_border"
        app:layout_constraintLeft_toLeftOf="@id/configure_recognize_category_border"
        app:layout_constraintRight_toRightOf="@id/configure_recognize_category_border"
        app:layout_constraintEnd_toEndOf="@id/configure_background">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/configure_language"
            android:text="@string/caption_language"/>
        <Spinner
            android:id="@+id/configure_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/configure_language_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_language" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/configure_online_LinearLayout"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/configure_language_LinearLayout"
        app:layout_constraintLeft_toLeftOf="@id/configure_language_LinearLayout"
        app:layout_constraintRight_toRightOf="@id/configure_language_LinearLayout"
        app:layout_constraintEnd_toEndOf="@id/configure_background">
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/configure_prefer_offline_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_online" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/configure_suffix_LinearLayout"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/configure_online_LinearLayout"
        app:layout_constraintLeft_toLeftOf="@id/configure_online_LinearLayout"
        app:layout_constraintRight_toRightOf="@id/configure_online_LinearLayout"
        app:layout_constraintEnd_toEndOf="@id/configure_background">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/configure_suffix"
            android:text="@string/caption_suffix"/>
        <EditText
            android:id="@+id/configure_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_suffix_dummy"
            android:inputType="text"
            android:autofillHints="" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/configure_suffix_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_suffix" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/configure_storage_category_border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="vertical"
        android:background="@color/gray_600"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configure_suffix_LinearLayout">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/configure_storage_category_border"
        app:layout_constraintLeft_toLeftOf="@id/configure_storage_category_border"
        app:layout_constraintRight_toRightOf="@id/configure_storage_category_border"
        app:layout_constraintEnd_toEndOf="@id/configure_background">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/configure_ip"
            android:text="@string/caption_ip"/>
        <EditText
            android:id="@+id/configure_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_ip"
            android:inputType="text"
            android:autofillHints="" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/configure_port"
            android:text="@string/caption_port"/>
        <EditText
            android:id="@+id/configure_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_port"
            android:inputType="number"
            android:autofillHints="@android:string/autofill" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/configure_send_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_send_result" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>